# energyshed-simulation

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  tox.ini
demo/: EnergyShedModel.py  EnergyShed_Prototype.ipynb  Household.py  MDPHousehold.py  ReflexHousehold.py
src/: EnergyShedClustering.ipynb  EnergyShedModel.py  EnergyShed_Prototype.ipynb  node_queue.py  plots.py
src/Agents/: GridHousehold.py  Household.py  MDPHousehold.py  QHousehold.py  ReflexHousehold.py
tests/: test_energyshed.py  test_mdphousehold.py
